gccida/c3/resolve_unique_section
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/resolve_unique_section/src/varasm.c:971:40: error: use of undeclared identifier 'resolve_unique_section_prefixes'
v8 = *( const char *const *)( ( char *)resolve_unique_section_prefixes[v4] 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/resolve_unique_section/src/obj/varasm.o] Error 1
